@@ -248,7 +248,7 @@ class RDoc::Context < RDoc::CodeObject
     new_meth.is_alias_for = meth
     new_meth.singleton    = meth.singleton
     new_meth.params       = meth.params
-    new_meth.comment = "Alias for \##{meth.name}"
+    new_meth.comment      = an_alias.comment
     meth.add_alias new_meth
     add_method new_meth
   end
